Fix footer, add script

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
     <title>Post To Stop The War In Ukraine</title>
     <!-- Search Engine -->
     <meta name="description" content="Цей ресурс створений, щоб легко і швидко передавати закордон найважливіші месиджі про війну. Всі вони вже перекладені мовами цих країн. Можете також використовувати картинки з нашої галереї постерів. Сподіваємося, наш ресурс стане вам надійним помічником! Постимо, репостимо, поширюємо, щоб зупинити війну!">
-    <meta name="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/master/public/post.png">
+    <meta name="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/master/public/post.jpg">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Post To Stop The War In Ukraine">
     <meta itemprop="description" content="Цей ресурс створений, щоб легко і швидко передавати закордон найважливіші месиджі про війну. Всі вони вже перекладені мовами цих країн. Можете також використовувати картинки з нашої галереї постерів. Сподіваємося, наш ресурс стане вам надійним помічником! Постимо, репостимо, поширюємо, щоб зупинити війну!">
-    <meta itemprop="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/master/public/post.png">
+    <meta itemprop="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/master/public/post.jpg">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Post To Stop The War In Ukraine">
@@ -30,7 +30,7 @@
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Post To Stop The War In Ukraine">
     <meta name="og:description" content="Цей ресурс створений, щоб легко і швидко передавати закордон найважливіші месиджі про війну. Всі вони вже перекладені мовами цих країн. Можете також використовувати картинки з нашої галереї постерів. Сподіваємося, наш ресурс стане вам надійним помічником! Постимо, репостимо, поширюємо, щоб зупинити війну!">
-    <meta name="og:image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/master/public/post.png">
+    <meta name="og:image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/master/public/post.jpg">
     <meta name="og:type" content="website">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
