--- a/public/index.html
+++ b/public/index.html
@@ -6,30 +6,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://npmcdn.com/flag-icons@6.1.1/css/flag-icons.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="initial-scale=1">
     <meta
       name="description"
-      content="Цей ресурс створений, щоб легко і швидко передавати закордон найважливіші месиджі про війну. Всі вони вже перекладені мовами цих країн. Можете також використовувати картинки з нашої галереї постерів. Сподіваємося, наш ресурс стане вам надійним помічником! Постимо, репостимо, поширюємо, щоб зупинити війну!"
+      content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let\'s post, repost, and share to stop the war!"
     />
     <!-- COMMON TAGS -->
     <meta charset="utf-8">
     <title>Post To Stop The War In Ukraine</title>
     <!-- Search Engine -->
-    <meta name="description" content="Цей ресурс створений, щоб легко і швидко передавати закордон найважливіші месиджі про війну. Всі вони вже перекладені мовами цих країн. Можете також використовувати картинки з нашої галереї постерів. Сподіваємося, наш ресурс стане вам надійним помічником! Постимо, репостимо, поширюємо, щоб зупинити війну!">
+    <meta name="description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let\'s post, repost, and share to stop the war!">
     <meta name="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/master/public/post.jpg">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Post To Stop The War In Ukraine">
-    <meta itemprop="description" content="Цей ресурс створений, щоб легко і швидко передавати закордон найважливіші месиджі про війну. Всі вони вже перекладені мовами цих країн. Можете також використовувати картинки з нашої галереї постерів. Сподіваємося, наш ресурс стане вам надійним помічником! Постимо, репостимо, поширюємо, щоб зупинити війну!">
+    <meta itemprop="description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let\'s post, repost, and share to stop the war!">
     <meta itemprop="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/master/public/post.jpg">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Post To Stop The War In Ukraine">
-    <meta name="twitter:description" content="Цей ресурс створений, щоб легко і швидко передавати закордон найважливіші месиджі про війну. Всі вони вже перекладені мовами цих країн. Можете також використовувати картинки з нашої галереї постерів. Сподіваємося, наш ресурс стане вам надійним помічником! Постимо, репостимо, поширюємо, щоб зупинити війну!">
+    <meta name="twitter:description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let\'s post, repost, and share to stop the war!">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Post To Stop The War In Ukraine">
-    <meta name="og:description" content="Цей ресурс створений, щоб легко і швидко передавати закордон найважливіші месиджі про війну. Всі вони вже перекладені мовами цих країн. Можете також використовувати картинки з нашої галереї постерів. Сподіваємося, наш ресурс стане вам надійним помічником! Постимо, репостимо, поширюємо, щоб зупинити війну!">
+    <meta name="og:description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let\'s post, repost, and share to stop the war!">
     <meta name="og:image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/master/public/post.jpg">
     <meta name="og:type" content="website">
     <!--
