Add Intl.DisplayNames polyfill

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
     <title>Post To Stop The War In Ukraine</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=Intl"></script>
+    <script
+        src="https://polyfill.io/v3/polyfill.min.js?features=Intl,Intl.DisplayNames,Intl.DisplayNames.~locale.en,,Intl.DisplayNames.~locale.uk"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T5XJPG5B1Z"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
