Init upgrade, header + footer

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">
     <link
         rel="stylesheet"
         href="https://npmcdn.com/flag-icons@6.1.1/css/flag-icons<% if (process.env.NODE_ENV === 'production') { %>.min<% } %>.css"
@@ -50,6 +50,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
         src="https://polyfill.io/v3/polyfill.min.js?features=Intl,Intl.DisplayNames,Intl.DisplayNames.~locale.en,,Intl.DisplayNames.~locale.uk"></script>
+    <script src="https://unpkg.com/airtable@0.11.3/build/airtable.browser.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T5XJPG5B1Z"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
