--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@
     <title>Post To Stop The War In Ukraine</title>
     <!-- Search Engine -->
     <meta name="description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let's post, repost, and share to stop the war!">
-    <meta name="image" content="%PUBLIC_URL%/preview.png">
+    <meta name="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/new/public/preview.png">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Post To Stop The War In Ukraine">
     <meta itemprop="description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let's post, repost, and share to stop the war!">
-    <meta itemprop="image" content="%PUBLIC_URL%/preview.png">
+    <meta itemprop="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/new/public/preview.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Post To Stop The War In Ukraine">
@@ -39,7 +39,7 @@
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Post To Stop The War In Ukraine">
     <meta name="og:description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let's post, repost, and share to stop the war!">
-    <meta name="og:image" content="%PUBLIC_URL%/preview.png">
+    <meta name="og:image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/new/public/preview.png">
     <meta name="og:type" content="website">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
