--- a/public/index.html
+++ b/public/index.html
@@ -16,25 +16,25 @@
     <meta name="viewport" content="initial-scale=1">
     <meta
       name="description"
-      content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let\'s post, repost, and share to stop the war!"
+      content="Post to Stop War is a resource created to saturate conversations abroad with clear and accurate messages about the war in Ukraine. We select, explain, and adapt the most important for your communication to stay effective. No substitutions of concepts, no vagueness."
     />
     <!-- COMMON TAGS -->
     <meta charset="utf-8">
     <title>Post To Stop The War In Ukraine</title>
     <!-- Search Engine -->
-    <meta name="description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let's post, repost, and share to stop the war!">
+    <meta name="description" content="Post to Stop War is a resource created to saturate conversations abroad with clear and accurate messages about the war in Ukraine. We select, explain, and adapt the most important for your communication to stay effective. No substitutions of concepts, no vagueness.">
     <meta name="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/new/public/preview.png">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Post To Stop The War In Ukraine">
-    <meta itemprop="description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let's post, repost, and share to stop the war!">
+    <meta itemprop="description" content="Post to Stop War is a resource created to saturate conversations abroad with clear and accurate messages about the war in Ukraine. We select, explain, and adapt the most important for your communication to stay effective. No substitutions of concepts, no vagueness.">
     <meta itemprop="image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/new/public/preview.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Post To Stop The War In Ukraine">
-    <meta name="twitter:description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let's post, repost, and share to stop the war!">
+    <meta name="twitter:description" content="Post to Stop War is a resource created to saturate conversations abroad with clear and accurate messages about the war in Ukraine. We select, explain, and adapt the most important for your communication to stay effective. No substitutions of concepts, no vagueness.">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Post To Stop The War In Ukraine">
-    <meta name="og:description" content="This resource is designed to quickly and easily share abroad the most important messages about the war. All of the messages have already been translated into the languages of different countries. You can also use pictures from our poster gallery. We hope our resource will be a reliable assistant to you! Let's post, repost, and share to stop the war!">
+    <meta name="og:description" content="Post to Stop War is a resource created to saturate conversations abroad with clear and accurate messages about the war in Ukraine. We select, explain, and adapt the most important for your communication to stay effective. No substitutions of concepts, no vagueness.">
     <meta name="og:image" content="https://raw.githubusercontent.com/rudnitskih/post-to-stop-war/new/public/preview.png">
     <meta name="og:type" content="website">
     <!--
