Add polyfill for replaceAll

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <title>Post To Stop The War In Ukraine</title>
 
     <script
-        src="https://polyfill.io/v3/polyfill.min.js?features=Intl,Intl.DisplayNames,Intl.DisplayNames.~locale.en,,Intl.DisplayNames.~locale.uk"></script>
+        src="https://polyfill.io/v3/polyfill.min.js?features=String.prototype.replaceAll,Intl,Intl.DisplayNames,Intl.DisplayNames.~locale.en,,Intl.DisplayNames.~locale.uk"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T5XJPG5B1Z"></script>
     <script>
