Object.fromEntries polyfill

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <title>Post To Stop The War In Ukraine</title>
 
     <script
-        src="https://polyfill.io/v3/polyfill.min.js?features=String.prototype.replaceAll,Intl,Intl.DisplayNames,Intl.DisplayNames.~locale.en,,Intl.DisplayNames.~locale.uk"></script>
+        src="https://polyfill.io/v3/polyfill.min.js?features=Object.fromEntries,String.prototype.replaceAll,Intl,Intl.DisplayNames,Intl.DisplayNames.~locale.en,,Intl.DisplayNames.~locale.uk"></script>
     <!-- Configure Sentry -->
     <script
         src="https://browser.sentry-cdn.com/7.15.0/bundle.tracing.min.js"
