--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
           return getQueryParam('force') === 'true';
         };
 
-        const isStaticData = getQueryParam('static') === 'true';
+        const isStaticData = getQueryParam('static') === 'true' || Math.random() > 0.5;
 
         const getAirtableData = async (tableId, {filterByFormula, cacheTime, fields, perPage, sortBy, sortDirection} = {}) => {
           let params = {
@@ -142,6 +142,8 @@
 
           return response.json();
         };
+
+        window.app.isStaticData = isStaticData;
 
         window.app.getMessages = async (Language, amount) => {
           return isStaticData ? getStaticDataMessages(Language) : getAirtableData('tbl9ilTjFUtO5Tsnm', {
