--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
           return getQueryParam('force') === 'true';
         };
 
-        const isStaticData = getQueryParam('static') === 'true' || Math.random() >= 1;
+        const isStaticData = getQueryParam('static') !== 'false';
 
         const getAirtableData = async (tableId, {filterByFormula, cacheTime, fields, perPage, sortBy, sortDirection} = {}) => {
           let params = {
